--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -1,5 +1,16 @@
+info:
+  component: Gateway Server
+
+endpoints:
+  restart:
+    enabled: true
+  shutdown:
+    enabled: true
+  health:
+    sensitive: false
+
 server:
-  port: ${PORT:8803}
+  port: ${PORT:8080}
 
 logging:
   pattern:
