--- a/alert-service/src/main/resources/bootstrap.yml
+++ b/alert-service/src/main/resources/bootstrap.yml
@@ -1,17 +1,6 @@
 spring:
-    application:
-        name: alert-service
-    cloud:
-        consul:
-            host: 192.168.100.29
-            port: 8500
-            discovery: {instance-id: '${spring.application.name}:${server.port}'}
-
-logging:
-    level:
-        org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-    pattern:
-        console: '%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n'
-
-server:
-  port: ${PORT:5002}
+  application:
+    name: alert-service
+  cloud:
+    config:
+        uri: http://192.168.100.29:8888
