--- a/config-service/src/main/resources/config/alert-service.yml
+++ b/config-service/src/main/resources/config/alert-service.yml
@@ -1,3 +1,20 @@
+server:
+  port: ${PORT:5002}
+
+eureka:
+  instance:
+    hostname: 192.168.100.29
+    metadataMap:
+      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 5
+    lease-expiration-duration-in-seconds: 5
+  client:
+    fetchRegistry: true
+    registryFetchIntervalSeconds: 5
+    serviceUrl:
+      defaultZone: http://192.168.100.29:8802/eureka/
+
 spring:
     application:
         name: alert-service
@@ -39,6 +56,8 @@ spring:
         fixedDelay: 5000
         initialDelay: 5000
         verificationLink: 192.168.100.29/user/verify
+    zipkin:
+        base-url: http://192.168.100.29:9411/
 
 flyway:
     enabled: true
@@ -46,4 +65,3 @@ flyway:
     schemas: alert_service
     user: root
     password: root
-
