--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -20,10 +20,12 @@
     </properties>
 
 	<dependencies>
+		<!-- discovery service dependencies-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
+		<!-- Config service dependencies-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
