--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     </parent>
     
     <modules>
+        <module>core-service</module>
+        <module>config-service</module>
+        <module>discovery-service</module>
         <module>gateway-service</module>
-        <module>core-service</module> 
+        <module>auth-service</module>
         <module>user-service</module>
         <module>alert-service</module>
     </modules>
